cmake_minimum_required(VERSION 3.6)
project(study_c)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        c_base/00_calclock/calclock.c
        c_base/01_daytimetcpcli/daytimetcpcli.c
        c_base/02_hello/02_hello.c
        c_base/03_max/03_max.c
        c_base/04_add/04_add.c
        c_base/05_type/05_type.c
        c_base/06_scanf/06_scanf.c
        c_base/07_array/07_array.c
        c_base/08_char_array/08_char_array.c
        c_base/09_pointer/09_pointer.c
        c_base/10_pointer/10_pointer.c
        c_base/11_pointer_array/11_pointer_array.c
        c_base/12_pointer_array/12_pointer_array.c
        c_base/13_pointer_array_char/13_pointer_array_char.c
        c_base/14_pointer_muti_array/14_pointer_muti_array.c
        c_base/15_lower_upper_char/15_lower_upper_char.c
        c_base/16_mkdir_rmdir/16_mkdir_rmdir.c
        c_base/17_create_file_remove_file/17_create_file_remove_file.c
        c_base/18_gethostbyname/18_gethostbyname.c
        c_base/19_socket_create/19_socket_create.c
        c_base/20_socket_udp/client.c
        c_base/20_socket_udp/server.c
        c_base/21_tcp_select/client.c
        c_base/21_tcp_select/server.c
        c_base/22_udp_connect/client.c
        c_base/22_udp_connect/server.c
        c_base/23_daytime/passivesock.c
        c_base/23_daytime/passiveTCP.c
        c_base/23_daytime/passiveUDP.c
        c_base/23_daytime/TCPdaytime.c
        c_base/23_daytime/TCPdaytimed.c
        c_base/23_daytime/UDPtime.c
        c_base/23_daytime/UDPtimed.c
        c_base/24_getpid/get_pid.c
        c_base/25_fork/fork_test.c
        c_base/26_vfork/vfork_test1.c
        c_base/26_vfork/vfork_test2.c
        c_base/27_fork/fork.c
        c_base/28_execl/execl.c
        c_base/29_exec_fork/exec_fork.c
        c_base/30_lt_et/lt_et.c
        c_base/31_epolloneshot/epolloneshot.c
        c_base/32_chat_poll/chat_client.c
        c_base/32_chat_poll/chat_server.c
        c_base/33_tcp_and_udp_server/tcp_udp.c
        c_base/34_fork_epoll_server/fork_epoll_server.c
        c_base/35_thread/locker.h
        c_base/36_processpool/processpool.h
        c_base/37_cgi_conn/cgi_conn.h
        c_base/38_threadpool/threadpool.h
        c_base/39_http_conn/http_conn.cpp
        c_base/39_http_conn/http_conn.h
        c_base/39_http_conn/main.cpp
        c_base/40_unified_event_source/unified_event_source.c
        c_base/41_epoll_thread/epoll_thread.c
        c_linux/00_Helloworld/Helloworld.c
        c_linux/01_open_file/01_open_file.c
        c_linux/02_file/02_file.c
        c_linux/03_dir/03_dir.c
        c_linux/04_rmdir/04_rmdir.c
        c_linux/05_read_write_file/05_read_write_file.c
        c_linux/06_write_file/06_write_file.c
        c_linux/07_file/07_file.c
        c_linux/08_fread/08_fread.c
        c_linux/09_fscanf/09_fscanf.c
        c_linux/10_file/10_file.c
        c_linux/11_fork/11_fork.c
        c_linux/12_beexec/12_beexec.c
        c_linux/12_doexec/12_doexec.c
        c_linux/13_Pipe/13_Pipe.c
        c_linux/14_dup/14_dup.c
        c_linux/15_pthread/15_pthread.c
        c_linux/16_thread/16_thread.c
        c_linux/17_thread_mutex/17_thread_mutex.c
        c_linux/18_thread/18_thread.c
        c_linux/19_thread/19_thread.c
        c_linux/20_client/20_client.c
        c_linux/20_server/20_server.c
        c_linux/21_gethostname/21_gethostname.c
        c_linux/22_http/22_http.c
        c_linux/23_hello_to_glade/23_hello_to_glade.c
        c_linux/24_telbook/telbook.c
        cmake/01/main.c
        cmake/02/hello.c
        cmake/02/hello.h
        cmake/02/main.c
        cmake/03/hello.c
        cmake/03/hello.h
        cmake/03/main.c
        cmake/04/libhello/02_hello.h
        cmake/04/libhello/hello.c
        cmake/04/src/main.c
        cmake/05/libhello/hello.c
        cmake/05/libhello/hello.h
        cmake/05/src/main.c
        cpp/01.cpp
        data_structures/Array/Array.c
        data_structures/HString/HString.c
        data_structures/List/List.c
        data_structures/List2/List2.c
        data_structures/Queue/Queue.c
        data_structures/Queue2/Queue2.c
        data_structures/SString/SString.c
        data_structures/Stack/Stack.c
        ICTCLAS_Test/ICTCLAS_Test.cpp
        ICTCLAS_Test/test.cpp
        mini-muduo/0.01/main.cc
        mini-muduo/0.02/main.cc
        mini-muduo/0.02/TcpServer.cc
        mini-muduo/0.02/TcpServer.h
        mini-muduo/0.03/Channel.cc
        mini-muduo/0.03/Channel.h
        mini-muduo/0.03/Declear.h
        mini-muduo/0.03/Define.h
        mini-muduo/0.03/IChannelCallBack.h
        mini-muduo/0.03/main.cc
        mini-muduo/0.03/TcpServer.cc
        mini-muduo/0.03/TcpServer.h
        muduo/01_echo/echo.cc
        muduo/01_echo/echo.h
        muduo/01_echo/main.cc
        readbook.High-Performance-Linux-Server-Programming/5-1/byteorder.c
        readbook.High-Performance-Linux-Server-Programming/5-3/listen.c
        readbook.High-Performance-Linux-Server-Programming/5-5/accept.c
        readbook.High-Performance-Linux-Server-Programming/5-6/client.c
        readbook.High-Performance-Linux-Server-Programming/5-6/server.c
        readbook.Server-side-Development-Technology-and-Practices/6-1/client.cpp
        readbook.Server-side-Development-Technology-and-Practices/6-1/server.cpp
        readbook.Server-side-Development-Technology-and-Practices/6-4/client.cpp
        readbook.Server-side-Development-Technology-and-Practices/6-4/server.cpp
        readbook.Server-side-Development-Technology-and-Practices/6-5/client.cpp
        readbook.Server-side-Development-Technology-and-Practices/6-5/define.h
        readbook.Server-side-Development-Technology-and-Practices/6-5/server.cpp
        readbook.Server-side-Development-Technology-and-Practices/7-4/client.cpp
        readbook.Server-side-Development-Technology-and-Practices/7-4/server.cpp
        socket/01/ChatClient.cpp
        socket/01/ChatServer.cpp
        socket/01/ClientSocket.cpp
        socket/01/ClientSocket.h
        socket/01/ServerSocket.cpp
        socket/01/ServerSocket.h
        socket/01/Socket.cpp
        socket/01/Socket.h
        socket/01/SocketException.h
        socket/02/ChatClient.cpp
        socket/02/ChatServer.cpp
        socket/02/ClientSocket.cpp
        socket/02/ClientSocket.h
        socket/02/ServerSocket.cpp
        socket/02/ServerSocket.h
        socket/02/Socket.cpp
        socket/02/Socket.h
        socket/02/SocketException.h
        socket/02/ThreadReadWriteLock.h
        socket/03/ChatClient.cpp
        socket/03/ChatServer.cpp
        socket/03/ClientSocket.cpp
        socket/03/ClientSocket.h
        socket/03/Epoll.cpp
        socket/03/Epoll.h
        socket/03/EpollServerSocket.cpp
        socket/03/EpollServerSocket.h
        socket/03/ServerSocket.cpp
        socket/03/ServerSocket.h
        socket/03/Socket.cpp
        socket/03/Socket.h
        socket/03/SocketException.h
        socket/03/ThreadReadWriteLock.h
        v8_demos/include/v8-debug.h
        v8_demos/include/v8-preparser.h
        v8_demos/include/v8-profiler.h
        v8_demos/include/v8-testing.h
        v8_demos/include/v8.h
        v8_demos/include/v8stdint.h
        v8_demos/helloworld.cc)

add_executable(study_c ${SOURCE_FILES})